workloads/patrickdwyer-com/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patrickdwyer-com
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [patrickdwyer.com]
      secretName: patrickdwyer-com-tls
  rules:
    - host: patrickdwyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patrickdwyer-com
                port: { number: 80 }
